--- a/#source/scss/main.scss
+++ b/#source/scss/main.scss
@@ -627,7 +627,7 @@
     &__link{
         @media(max-width: 915px){
             &{  
-                color: #fa684f;
+                color: #ffffff;
             }
         }
     }
@@ -873,7 +873,7 @@
         }
         @media(max-width: 850px){
             &{  
-                left: -5%;
+                left: -13%;
             } 
         }
     }
